# GL-payment-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docs/: analise-atam.md  decisoes-arquiteturais.md  diagramas-c4.md  slo-sli-error-budget.md
infra/grafana/dashboards/: gateway-ha.json
infra/nginx/: nginx.conf
infra/postgres/primary/: init-primary.sh
infra/postgres/replica/: init-replica.sh
infra/prometheus/: prometheus.yml
infra/scripts/: auto-failover.sh  smoke-test.sh  validate-rpo.sh  validate-rto.sh  validate-split-brain.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
migrations/versions/: 001_create_transactions.py
src/: __init__.py  database.py  main.py  models.py  routes.py
tests/: conftest.py  test_api.py
